--- a/src/index.html
+++ b/src/index.html
@@ -45,10 +45,6 @@ showVideo = function() {
 </script>
 </head>
 <body>
-   <div style="font-size:36px">Hello Tech Forum!</div><br/><br/>
-   <div style="font-size:18px">Customer Name: <input style="font-size:18px" type="text" id="custName"></input></div><br/>
-   <button onclick="showPageMessage();">Show Page Message</button>
-   <button onclick="showSimpleDialog();">Show Dialog</button>
-   <button onclick="showVideo();">Show Video</button>
+HI DAD
 </body>
 </html>
