--- a/src/index.html
+++ b/src/index.html
@@ -744,41 +744,7 @@ window.addEventListener("message", function(a){
                         "-webkit-user-select: text; margin-top: 34px; margin-bottom: 37px;"
                         tabindex="-1">
                             <div id="surveyTable" class="dgrid-content ui-widget-content">
-
-                              <div class=
-                              " dgrid-row dgrid-row-even ui-state-default"
-                              id="dgrid_0-row-55">
-                                  <table class="dgrid-row-table">
-                                      <tbody>
-                                          <tr>
-                                              <td class=
-                                              "dgrid-cell dgrid-cell-padding dgrid-column-0 field-name"
-                                              tabindex="0">
-                                                  <div id="answer1" style=
-                                                  "margin-left: 0px">
-                                                      N/A
-                                                  </div>
-                                              </td>
-
-                                              <td class=
-                                              "dgrid-cell dgrid-cell-padding dgrid-column-1 field-phoneNumber">
-                                              <div id="answer2" style=
-                                              "margin-left: 0px">
-                                                      N/A
-                                                  </div>
-                                              </td>
-
-                                              <td class=
-                                              "dgrid-cell dgrid-cell-padding dgrid-column-1 field-phoneNumber">
-                                              <div id="answer2" style=
-                                              "margin-left: 0px">
-                                                      N/A
-                                                  </div>
-                                              </td>
-                                          </tr>
-                                      </tbody>
-                                  </table>
-                              </div>
+                              <p>No surveys found...</p>
                             </div>
                         </div>
 
